--- a/web-points/src/styles/reset.css
+++ b/web-points/src/styles/reset.css
@@ -1,6 +1,7 @@
 * {
   margin: 0px;
-  padding:0px
+  padding:0px;
+  box-sizing: border-box
 }
 
 body{
@@ -108,3 +109,17 @@ margin{
   color:#fff;
   border:none
 }
+
+.avatar-container{
+  display:flex;
+  align-items:center;
+  gap:8px
+}
+
+.avatar-container img{
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  object-fit: fill
+}
+
